# sakina-01

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: .env.example  README.md  apply_migration.py  check_db_values.py  check_users.py  db_values.txt  pyproject.toml  reproduce_nudge_issue.py  requirements.txt  seed_db.py  test_ai.py  test_api_simple.py  test_voice.py  update_schema.py  verify_enums.py  verify_users.py  verify_users_raw.py
backend/app/: __init__.py  auth.py  cache.py  config.py  database.py  main.py
backend/app/models/: __init__.py  intervention.py  journal.py  user.py
backend/app/routers/: dashboard.py  insights.py  intervention.py  journal.py  nudge.py  user.py
backend/app/schemas/: schemas.py
backend/app/services/: gemini_service.py
backend/migrations/: 001_initial_schema.sql  002_add_indexes.sql  002_add_user_profile_fields.sql  full_reset.sql
frontend/: .env.example
frontend/src/: App.tsx
frontend/src/components/: AuthModal.tsx  ProtectedRoute.tsx  SakinaLogo.tsx
src/: App.tsx  index.css
src/components/: AuthModal.tsx  ProtectedRoute.tsx
src/context/: SakinaContext.test.tsx  SakinaContext.tsx
src/data/: interventions.ts
src/hooks/: useApi.ts  useAudioRecorder.ts  useBackendWarmup.ts  useSakina.ts
src/layouts/: AppLayout.tsx
src/lib/: animation-utils.ts  api-client.ts  mock-bio-data.ts  mood-utils.ts
src/pages/: Auth.tsx  Index.tsx  OnboardingPage.tsx
src/test/: setup.ts
src/types/: sakina.d.ts
(+47 files in other folders)
