[project]
name = "backend"
version = "0.1.0"
description = "Backend for Design Build Blueprint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.13.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []

